--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,7 @@
-<h1>縮網址神器</h1>
+<container class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>縮網址神器</h1>
+      <p>這是一個簡單的縮網址服務，使用者可以將長網址轉換為短網址。</p>
+    </div>
+  </div>
