--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheet/bootstrap.css">
   <title>URL_SHORTENER</title>
 </head>
 <body>
   {{{ body}}}
+
+  <script src="/javastript/popper.js"></script>
+  <script src="/javastript/bootstrap.js"></script>
 </body>
 </html>
