--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,34 @@
-<container class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>縮網址神器</h1>
-      <p>這是一個簡單的縮網址服務，使用者可以將長網址轉換為短網址。</p>
+<div class="container mt-5 px-4">
+  <div class="row d-flex justify-content-center text-center">
+    <h1 style="font-weight: bold; font-size: clamp(32px, 8vw, 64px); letter-spacing: 2px;">縮網址神器</h1>
+    <p style="font-size: clamp(14px, 5vw, 16px);">這是一個簡單的縮網址服務，可以將長網址轉換為短網址</p>
+    <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" alt="縮網址神器"
+      style="width: clamp(150px, 15vw, 250px); height: auto; margin: 40px 0;">
+  </div>
+  <div class="row d-flex flex-column align-items-center mb-5">
+    <div class="text-center mb-4" style="width: clamp(300px, 50vw, 500px);">
+      <input class="form-control" type="text" placeholder="請輸入網址...">
+    </div>
+    <div class="text-center">
+      <button type="button" class="btn btn-outline-primary mb-3">Shorten!</button>
     </div>
   </div>
+</div>
+
+{{!-- <div class="container mt-5 px-4">
+  <div class="row d-flex justify-content-center text-center">
+    <h1 style="font-weight: bold; font-size: clamp(32px, 8vw, 64px); letter-spacing: 2px;">縮網址神器</h1>
+    <p style="font-size: clamp(14px, 5vw, 16px);">這是一個簡單的縮網址服務，可以將長網址轉換為短網址</p>
+    <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" alt="縮網址神器"
+      style="width: clamp(150px, 15vw, 250px); height: auto; margin: 40px 0;">
+  </div>
+  <div class="row d-flex flex-column align-items-center mb-5">
+    <div class="text-center mb-4">
+      <h3 style="font-weight: bold; font-size: clamp(22px, 4vw, 28px); margin-bottom: 2vw;">Done🥳 Please use this link!</h3>
+      <h3 style="font-weight: bold; font-size: clamp(24px, 6vw, 32px); color: darkblue; margin-bottom: 2vw;">我是網址</h3>
+    </div>
+    <div class="text-center">
+      <button type="button" class="btn btn-primary mb-3" style="width: clamp(100px, 15vw, 200px); font-weight: bold;">Copy!</button>
+    </div>
+  </div>
+</div> --}}
