add random number generation function

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,8 @@
 </head>
 <body>
   {{{ body}}}
-
+  
+  <script src="/javastript/charbox.js"></script>
   <script src="/javastript/popper.js"></script>
   <script src="/javastript/bootstrap.js"></script>
 </body>
