--- a/views/newurl.hbs
+++ b/views/newurl.hbs
@@ -9,7 +9,7 @@
     <div class="text-center mb-4">
       <h3 style="font-size: clamp(20px, 4vw, 24px); margin-bottom: 2vw;">Done🥳 Please use this link!
       </h3>
-      <h3 style="font-weight: bold; font-size: clamp(24px, 6vw, 32px); color: darkblue; margin-bottom: 2vw;">{{shortenurl.url}}</h3>
+      <h3 style="font-weight: bold; font-size: clamp(24px, 6vw, 32px); color: darkblue; margin-bottom: 2vw;">https://superurlshortener/{{urlID}}</h3>
     </div>
     <div class="text-center">
       <button type="text" class="btn btn-primary mb-3"
