add one-click copy function

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,8 +9,8 @@
 <body>
   {{{ body}}}
   
-  <script src="/javastript/charbox.js"></script>
-  <script src="/javastript/popper.js"></script>
-  <script src="/javastript/bootstrap.js"></script>
+  <script src="/javascript/copy.js"></script>
+  <script src="/javascript/popper.js"></script>
+  <script src="/javascript/bootstrap.js"></script>
 </body>
 </html>
