--- a/views/newurl.hbs
+++ b/views/newurl.hbs
@@ -9,10 +9,10 @@
     <div class="text-center mb-4">
       <h3 style="font-size: clamp(20px, 4vw, 24px); margin-bottom: 2vw;">Done🥳 Please use this link!
       </h3>
-      <h3 style="font-weight: bold; font-size: clamp(24px, 6vw, 32px); color: darkblue; margin-bottom: 2vw;">{{completeurl}}</h3>
+      <h3 style="font-weight: bold; font-size: clamp(24px, 6vw, 32px); color: darkblue; margin-bottom: 2vw;" id="completeurl">{{completeurl}}</h3>
     </div>
     <div class="text-center">
-      <button type="text" class="btn btn-primary mb-3"
+      <button type="text" class="btn btn-primary mb-3" id="copy-button" onclick="copy()"
         style="width: clamp(100px, 15vw, 200px); font-weight: bold;">Copy!</button>
     </div>
     <form action="/" method="GET" class="text-center">
