--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
   <div class="row mb-5">
     <form action="/urlshortener/newurl" method="POST" class="d-flex flex-column align-items-center">
       <div class="mb-4" style="width: clamp(300px, 50vw, 500px);">
-        <input class="form-control" type="text" name="url" placeholder="請輸入網址..." value="{{shortenurl.url}}">
+        <input class="form-control" type="text" name="url" placeholder="請輸入網址...">
       </div>
       <button type="submit" class="btn btn-outline-primary mb-3" style="font-weight: bold;">Shorten!</button>
     </form>
