Modify URL format

--- a/views/newurl.hbs
+++ b/views/newurl.hbs
@@ -10,7 +10,8 @@
       <h3 style="font-size: clamp(20px, 4vw, 24px); margin-bottom: 2vw;">Done🥳 Please use this link!
       </h3>
       <h3 style="font-weight: bold; font-size: clamp(24px, 6vw, 32px); color: darkblue; margin-bottom: 2vw;"
-        id="completeurl"><a href="{{clickableUrl}}" target="_blank">{{completeurl}}</a></h3>
+        id="completeurl"><a href="{{clickableUrl}}" target="_blank">{{clickableUrl}}</a></h3>
+      <p style="font-size: clamp(14px, 3vw, 16px); color: gray; margin-top: 1vw;">{{url}}</p>
     </div>
     <div class="text-center">
       <button type="text" class="btn btn-primary mb-3" id="copy-button" onclick="copy()"
